--- a/src/index.css
+++ b/src/index.css
@@ -106,6 +106,7 @@ body, html {
 .Toastify__toast--info {
   background: #3b82f6;
   color: white;
+  cursor: pointer;
 }
 
 .Toastify__toast--warning {
